fix: rounded borders for code blocks in dark mode

--- a/theme/base/static/smart.css
+++ b/theme/base/static/smart.css
@@ -1647,7 +1647,6 @@ li .badge {
     height: 2rem;
     padding: 0 0.5rem !important;
     font-size: 0.8rem;
-    color: hsl(var(--muted-foreground));
     background-color: hsl(var(--light-accent));
     border: 1px solid hsl(var(--border)) !important
 }
